# CASE_STUDY_OWKIN-PATHOLOGY_AI-2025

./: .gitignore  Case_study_Pathology_AI_2025.ipynb  lightning_model.py  pyproject.toml
notebooks/: Case_study_Pathology_AI_2025.ipynb
src/gklajer_case_study/: __init__.py  lightning.py
src/gklajer_case_study/utils/: __init__.py  constants.py  helpers.py  kaggle.py  postprocess.py
utils/: helpers.py
