[project]
name = "case-study-owkin"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "ipykernel>=6.29.5",
    "ipywidgets>=8.1.5",
    "kagglehub>=0.3.5",
    "lightning>=2.4.0",
    "notebook>=7.3.1",
    "opencv-python>=4.10.0.84",
    "scipy>=1.14.1",
    "torch>=2.5.1",
    "torchvision>=0.20.1",
    "transformers>=4.47.0",
    "wandb>=0.19.1",
]
