[project]
name = "gklajer_case_study"
version = "0.1.0"
description = "Core package for Gklajer for Case Study Owkin - Pathology AI - 2025 (Data Challenge)."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "bokeh>=3.6.2",
    "ipykernel>=6.29.5",
    "ipywidgets>=8.1.5",
    "kagglehub>=0.3.5",
    "lightning>=2.4.0",
    "matplotlib>=3.10.0",
    "notebook>=7.3.1",
    "numpy>=2.2.0",
    "opencv-python>=4.10.0.84",
    "scikit-image>=0.25.0",
    "scipy>=1.14.1",
    "torch>=2.5.1",
    "torchvision>=0.20.1",
    "transformers>=4.47.0",
    "wandb>=0.19.1",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
